# rag-retriever-bench

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: backend-request.yml
.github/workflows/: ci.yml
configs/: miracl-ja-all.yaml  miracl-ja-competitors.yaml  miracl-ja.yaml
docker/: embedEtcd.yaml
docs/: adding-a-backend.md  methodology.md
results/published/: miracl-ja-10000-20260711T040710Z.jsonl  miracl-ja-10000-20260711T040710Z.md  miracl-ja-10000-20260711T045346Z.jsonl  miracl-ja-10000-20260711T045346Z.md  miracl-ja-10000-20260711T052959Z.jsonl  miracl-ja-10000-20260711T052959Z.md  miracl-ja-100000-20260711T040503Z.jsonl  miracl-ja-100000-20260711T040503Z.md  miracl-ja-100000-20260711T045938Z.jsonl  miracl-ja-100000-20260711T045938Z.md  miracl-ja-100000-20260711T053605Z.jsonl  miracl-ja-100000-20260711T053605Z.md
src/rag_retriever_bench/: bench.py  cli.py  config.py  dataset.py  embed.py  metrics.py  report.py
src/rag_retriever_bench/retrievers/: __init__.py  base.py  chroma.py  clickhouse.py  lancedb.py  milvus.py  pgvector.py  qdrant.py  weaviate.py
tests/: test_config.py  test_dataset.py  test_e2e_bench.py  test_embed.py  test_metrics.py  test_report.py
tests/integration/: test_backends.py
