[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-retriever-bench"
version = "0.1.0"
description = "Benchmark harness for RAG retrieval backends: same corpus, same queries, same metrics — swap the database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ken imoto" }]
keywords = ["rag", "vector-search", "benchmark", "pgvector", "clickhouse", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "clickhouse-connect>=0.8",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9"]
weaviate = ["weaviate-client>=4.9"]
milvus = ["pymilvus>=2.4,<2.6"]
chroma = ["chromadb>=0.5"]
lancedb = ["lancedb>=0.15", "pyarrow>=15"]
all = [
    "qdrant-client>=1.9",
    "weaviate-client>=4.9",
    "pymilvus>=2.4,<2.6",
    "chromadb>=0.5",
    "lancedb>=0.15",
    "pyarrow>=15",
]

[project.scripts]
rag-retriever-bench = "rag_retriever_bench.cli:main"

[project.urls]
Repository = "https://github.com/kenimo49/rag-retriever-bench"

[tool.setuptools.packages.find]
where = ["src"]
