[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-retriever-bench"
version = "0.1.0"
description = "Benchmark harness for RAG retrieval backends: same corpus, same queries, same metrics — swap the database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ken imoto" }]
keywords = ["rag", "vector-search", "benchmark", "pgvector", "clickhouse", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "clickhouse-connect>=0.8",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9"]
weaviate = ["weaviate-client>=4.9"]
milvus = ["pymilvus>=2.4,<2.6"]
chroma = ["chromadb>=0.5"]
lancedb = ["lancedb>=0.15", "pyarrow>=15"]
all = [
    "qdrant-client>=1.9",
    "weaviate-client>=4.9",
    "pymilvus>=2.4,<2.6",
    "chromadb>=0.5",
    "lancedb>=0.15",
    "pyarrow>=15",
]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
rag-retriever-bench = "rag_retriever_bench.cli:main"

[project.urls]
Repository = "https://github.com/kenimo49/rag-retriever-bench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests need live backends (docker compose up -d); run them with
# `pytest -m integration` — the CLI -m overrides this default exclusion.
addopts = "-q -m 'not integration'"
markers = ["integration: needs live backend services (docker compose)"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B027: BaseRetriever.close() is an intentional no-op hook — backends without
# a connection simply don't override it.
ignore = ["B027"]
